--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 NODE_ENV="dev"
 
-DATABASE_URL="postgres://user:password@localhost:5432/db""
+POSTGRES_USER=""
+POSTGRES_PASSWORD=""
+POSTGRES_DB=""
+
+DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}"
 SECRET_KEY=""
